--- a/main.css
+++ b/main.css
@@ -20,14 +20,20 @@
 .header-image:hover{
 	filter:blur(2px);
 }
+@media (max-width: 400px) { #hello { display: none; } }
+@media (max-width: 700px) { #hello { width: 468px; height: 60px;display: none } }
+/* @media (min-width: 800px) { #hello{ width: 728px; height: 90px; display: none; } } */
+
 .header-data{
-	position: absolute;
-	top: 35%;
+
+	top: 25%;
 	right: 50%;
 	left: 10%;
 	bottom: 80%;
-	color: white;
-}
+	position: absolute;
+	color: white;		
+	}	
+
 
 #carouselExampleSlidesOnly{
 	height: 390px;
